--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -17,12 +17,17 @@ h5,
 h6 {
   color: black;
   font-family: var(--heading-font-family);
-  font-weight: bold;
 }
 
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+
+.project-description h2 {
+  font-size: 64px;
 }
 
 .hero {
@@ -51,4 +56,46 @@ p {
   border-radius: 4px;
   padding: 15px 30px;
   font-size: 18px;
+}
+
+.project-description a {
+  border-radius: 4px;
+  padding: 15px 30px;
+  font-size: 18px;
+  border: 1px solid var(--branding-color);
+  color: var(--branding-color);
+}
+
+.project-description h2 {
+  font-size: 64px;
+  margin-top: 60px;
+}
+
+.project-description {
+  padding: 0px 60px 100px;
+  font-size: 16px;
+}
+
+@media (max-width: 900px) {
+  .hero h1 {
+    font-size: 45px;
+    line-height: 1.5;
+  }
+
+  .hero h2 {
+    font-size: 20px;
+  }
+  .project-description h2 {
+    font-size: 36px;
+    margin-top: 0px;
+  }
+
+  .hero {
+    padding: 70px 20px;
+  }
+
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
 }
