--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -50,12 +50,38 @@ p {
   font-size: 24px;
   line-height: 2;
 }
-.hero a {
+.hero a,
+.about-hero a {
   background: var(--branding-color);
   color: white;
   border-radius: 4px;
   padding: 15px 30px;
   font-size: 18px;
+}
+
+.about-hero h1 {
+  font-size: 64px;
+  line-height: 1.2;
+  font-family: var(--heading-font-family);
+}
+
+.about-hero h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+  font-weight: bold;
+}
+
+.about-hero {
+  padding: 0px;
+  text-align: center;
+}
+
+.about-hero-content {
+  margin: 30px;
+}
+
+.about-hero p {
+  text-align: left;
 }
 
 .project-description a {
