Created and Styled work.html

--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -51,7 +51,7 @@ p {
   line-height: 2;
 }
 .hero a,
-.about-hero a {
+.content-container a {
   background: var(--branding-color);
   color: white;
   border-radius: 4px;
@@ -59,28 +59,36 @@ p {
   font-size: 18px;
 }
 
-.about-hero h1 {
-  font-size: 64px;
+.content h1 {
+  font-size: 60px;
   line-height: 1.2;
   font-family: var(--heading-font-family);
 }
 
-.about-hero h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
   font-weight: bold;
 }
+.content h3 {
+  font-size: 24px;
+  margin: 20px 0 0;
+  line-height: 1.5;
+}
 
-.about-hero {
+.content p {
+  font-size: 14px;
+}
+.content-container {
   padding: 0px;
   text-align: center;
 }
 
-.about-hero-content {
+.content {
   margin: 30px;
 }
 
-.about-hero p {
+.content .content-container p {
   text-align: left;
 }
 
