--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -50,8 +50,8 @@ p {
   font-size: 24px;
   line-height: 2;
 }
-.hero a,
-.content-container a {
+.hero btn,
+.content-container btn {
   background: var(--branding-color);
   color: white;
   border-radius: 4px;
