--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -50,8 +50,8 @@ p {
   font-size: 24px;
   line-height: 2;
 }
-.hero btn,
-.content-container btn {
+.hero a,
+.content-container a {
   background: var(--branding-color);
   color: white;
   border-radius: 4px;
@@ -132,4 +132,11 @@ p {
     padding: 0;
     text-align: center;
   }
+}
+
+.content e-mail {
+  background: none;
+  color: black;
+  border-radius: none;
+  padding: none;
 }
