--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -27,7 +27,19 @@ p {
 }
 
 .project-description h2 {
-  font-size: 64px;
+  font-size: 62px;
+}
+.project-description a {
+  border-radius: 4px;
+  padding: 15px 30px;
+  font-size: 18px;
+  border: 1px solid var(--branding-color);
+  color: var(--branding-color);
+}
+
+.project-description {
+  padding: 0px 60px 100px;
+  font-size: 16px;
 }
 
 .hero {
@@ -60,7 +72,7 @@ p {
 }
 
 .content h1 {
-  font-size: 60px;
+  font-size: 55px;
   line-height: 1.2;
   font-family: var(--heading-font-family);
 }
@@ -92,24 +104,6 @@ p {
   text-align: left;
 }
 
-.project-description a {
-  border-radius: 4px;
-  padding: 15px 30px;
-  font-size: 18px;
-  border: 1px solid var(--branding-color);
-  color: var(--branding-color);
-}
-
-.project-description h2 {
-  font-size: 64px;
-  margin-top: 60px;
-}
-
-.project-description {
-  padding: 0px 60px 100px;
-  font-size: 16px;
-}
-
 @media (max-width: 900px) {
   .hero h1 {
     font-size: 45px;
@@ -129,7 +123,7 @@ p {
   }
 
   .project-description {
-    padding: 0;
+    padding: 20px 0;
     text-align: center;
   }
 }
@@ -139,4 +133,8 @@ p {
   color: black;
   border-radius: none;
   padding: none;
+}
+
+.active {
+  color: var(--branding-color) !important;
 }
