--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -19,6 +19,10 @@ h6 {
   font-family: var(--heading-font-family);
 }
 
+footer h4 {
+  font-size: 36px;
+}
+
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
@@ -35,6 +39,11 @@ p {
   font-size: 18px;
   border: 1px solid var(--branding-color);
   color: var(--branding-color);
+}
+
+.project-description a:hover {
+  color: white;
+  background: var(--branding-color);
 }
 
 .project-description {
@@ -63,12 +72,23 @@ p {
   line-height: 2;
 }
 .hero a,
-.content-container a {
+.content-container a,
+.contact-box a {
   background: var(--branding-color);
   color: white;
   border-radius: 4px;
   padding: 15px 30px;
   font-size: 18px;
+}
+
+.hero a:hover {
+  background: white;
+  color: var(--branding-color);
+}
+
+.content-container a:hover {
+  background: white;
+  color: var(--branding-color);
 }
 
 .content h1 {
@@ -113,6 +133,18 @@ p {
   .hero h2 {
     font-size: 20px;
   }
+
+  footer h4 {
+    font-size: 18px;
+  }
+  footer .btn {
+    font-size: 12px;
+  }
+
+  footer .email-link {
+    padding: 0;
+    margin: 0;
+  }
   .project-description h2 {
     font-size: 36px;
     margin-top: 0px;
@@ -137,4 +169,39 @@ p {
 
 .active {
   color: var(--branding-color) !important;
+}
+
+footer .contact-box {
+  background: var(--primary-color);
+  padding: 30px;
+  border-radius: 10px;
+}
+
+footer .contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+  text-align: center;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--primary-color);
+  padding: 10px 14px;
+  font-size: 19px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
 }
