--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -19,7 +19,7 @@ h6 {
   font-family: var(--heading-font-family);
 }
 
-footer h4 {
+footer h3 {
   font-size: 36px;
   text-align: left;
 }
@@ -50,14 +50,14 @@ p {
 }
 
 .project-description {
-  padding: 0px 60px 100px;
+  padding: 20px 60px 100px;
   font-size: 16px;
 }
 
 .hero {
   background: var(--primary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 120px 20px;
 }
 
 .hero p {
@@ -126,7 +126,7 @@ p {
   text-align: left;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   .hero h1 {
     font-size: 45px;
     line-height: 1.5;
@@ -135,9 +135,11 @@ p {
   .hero h2 {
     font-size: 20px;
   }
-
-  footer h4 {
-    font-size: 18px;
+  .content h1 {
+    font-size: 40px;
+  }
+  footer h3 {
+    font-size: 25px;
   }
   footer .btn {
     font-size: 12px;
@@ -219,4 +221,8 @@ footer .btn-branding {
 
 .ml-5 {
   margin-left: 20px !important;
+}
+
+.img-fluid {
+  margin: 30px 0 30px 0;
 }
