--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -224,7 +224,11 @@ footer .btn-branding {
 }
 
 .img-fluid {
-  margin: 30px 0 30px 0;
+  margin: 20px 0 30px 0;
   border-radius: 15px;
   max-width: 80%;
+}
+
+.meditation {
+  margin: 0 0 30px 0;
 }
