--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -1,13 +1,24 @@
 :root {
-  --branding-color: #0c3bdf;
-  --primary-color: #e7e7ff;
+  --branding-color: #e4b89e;
+  --primary-color: #f2eae6;
+  --other-color: #D6CAC7:
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
+  --branding-font-family: "Corinthia", cursive;
 }
 .hero h1 {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--branding-font-family);
   color: black;
-  font-size: 96px;
+  font-size: 120px;
+  font-weight: 700;
+}
+
+header {
+  background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/095/075/original/header.png?1693308367");
+  background-size: cover;
+  background-position: 25% 75%;
+
+  
 }
 
 h2,
@@ -27,42 +38,52 @@ footer p {
   text-align: left;
 }
 p {
-  font-family: var(--default-font-family);
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
+  font-family: var(--default-font-family)}
+
+ .grid {
+        display: grid;
+      }
+.grid-2-col {
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 45px;
+        align-items: center;
+        justify-content: center;
+      }
+
+section h2 {
+  font-size: 50px;
 }
 
-.project-description h2 {
-  font-size: 62px;
+section p {
+  line-height: 1.5;
+  font-size: 25px;
 }
-.project-description .btn-branding-outline {
-  border-radius: 4px;
-  padding: 15px 30px;
-  font-size: 18px;
+
+section .btn-branding-outline, .about-me .btn-branding-outline {
+  border-radius: 30px;
+  padding: 15px 25px;
+  font-size: 19px;
+  transition: all 200ms ease-in-out;
   border: 1px solid var(--branding-color);
-  color: var(--branding-color);
-}
-
-.project-description a:hover {
-  color: white;
+  color: snow;
   background: var(--branding-color);
 }
 
-.project-description {
-  padding: 20px 60px 100px;
-  font-size: 16px;
+section .btn-branding-outline:hover, 
+{
+  color: var(--branding-color);
+  background: white;
+  border: 1px solid var(--branding-color);
 }
 
+
 .hero {
-  background: var(--primary-color);
   text-align: center;
   padding: 120px 20px;
 }
 
 .hero p {
   font-size: 36px;
-  font-family: var(--default-font-family);
   font-weight: bold;
   margin: 0;
   color: #272142;
@@ -74,62 +95,29 @@ p {
   font-size: 24px;
   line-height: 2;
 }
-.hero .btn-branding,
-.content-container .btn-branding {
+ .hero .btn-branding
+{
   background: var(--branding-color);
   color: white;
-  border-radius: 4px;
+  border-radius: 30px;
   padding: 15px 30px;
   font-size: 18px;
+  transition: all 200ms ease-in-out;
+  
 }
 
-.hero a:hover {
+.hero .btn-branding:hover {
   background: white;
   color: var(--branding-color);
 }
 
-.content-container a:hover {
-  background: white;
-  color: var(--branding-color);
-}
 
-.content h1 {
-  font-size: 55px;
-  line-height: 1.2;
-  font-family: var(--heading-font-family);
-}
 
-.content-container h2 {
-  font-size: 18px;
-  font-family: var(--default-font-family);
-  font-weight: bold;
-}
-.content h3 {
-  font-size: 24px;
-  margin: 20px 0 0;
-  line-height: 1.5;
-}
 
-.content p {
-  font-size: 14px;
-}
-.content-container {
-  padding: 0px;
-  text-align: center;
-}
-
-.content {
-  margin: 30px;
-}
-
-.content .content-container p {
-  text-align: left;
-}
-
-@media (max-width: 1200px) {
+@media (max-width: 960px) {
   .hero h1 {
-    font-size: 45px;
-    line-height: 1.5;
+    font-size: 80px;
+    line-height: 1;
   }
 
   .hero h2 {
@@ -149,19 +137,27 @@ p {
     padding: 0;
     margin: 0;
   }
-  .project-description h2 {
-    font-size: 36px;
-    margin-top: 0px;
-  }
-
+ 
   .hero {
     padding: 70px 20px;
   }
 
-  .project-description {
-    padding: 20px 0;
-    text-align: center;
+  .tech-used {
+    font-size: 20px;
   }
+ 
+  .headshot {
+    display: none;
+  }
+
+   .grid {
+          grid-template-columns: 1fr;
+          grid-gap: 15px;
+        }
+       
+        .grid img {
+          display: none;
+        }
 }
 
 .content e-mail {
@@ -178,7 +174,7 @@ p {
 footer .contact-box {
   background: var(--primary-color);
   padding: 30px;
-  border-radius: 10px;
+  border-radius: 30px;
 }
 
 footer .contact-box p {
@@ -203,7 +199,7 @@ footer .social-links a {
   padding: 10px 14px;
   font-size: 19px;
   border-radius: 50%;
-  transition: all 100ms ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 footer .social-links a:hover {
@@ -214,7 +210,7 @@ footer .social-links a:hover {
 footer .btn-branding {
   background: var(--branding-color);
   color: white;
-  border-radius: 4px;
+  border-radius: 30px;
   padding: 15px 30px;
   font-size: 18px;
 }
@@ -223,11 +219,31 @@ footer .btn-branding {
   margin-left: 20px !important;
 }
 
-.img-fluid {
-  margin: 20px 0 30px 0;
-  border-radius: 15px;
-}
-
 .meditation {
   margin: 0 0 30px 0;
 }
+
+.navbar-brand {
+  font-family: var(--branding-font-family) ;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.tech-used {
+  font-weight: bold;
+}
+
+p.about-me-summary {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+section.about-me {
+  margin: 30px auto 15px;
+}
+
+.about-me img {
+  border-radius: 30px;
+}
+
+
