--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -183,17 +183,21 @@ p.about-me-summary {
 }
 
 @media (max-width: 960px) {
+  .about-me {
+    font-size: 30px;
+    margin-bottom: 15px;
+  }
   .hero {
-    padding: 70px 20px;
+    padding: 40px 20px;
   }
 
   .hero h1 {
-    font-size: 80px;
+    font-size: 60px;
     line-height: 1;
   }
 
   .hero h2 {
-    font-size: 20px;
+    font-size: 15px;
   }
   .content h1 {
     font-size: 40px;
@@ -201,17 +205,19 @@ p.about-me-summary {
   footer h3 {
     font-size: 25px;
   }
-  footer .btn-branding {
-    font-size: 12px;
-  }
 
   footer .email-link {
     padding: 0;
     margin: 0;
   }
 
+  footer .btn-branding {
+    font-size: 12px;
+    vertical-align: middle;
+  }
+
   .tech-used {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   .headshot {
@@ -220,10 +226,19 @@ p.about-me-summary {
 
   .grid {
     grid-template-columns: 1fr;
-    grid-gap: 15px;
+    grid-gap: 10px;
   }
 
   .grid img {
     display: none;
+  }
+  section h2 {
+    font-size: 30px;
+  }
+
+  section .btn-branding-outline,
+  .about-me .btn-branding-outline {
+    padding: 8px 16px;
+    font-size: 12px;
   }
 }
